src/objects/ffbc__Log__c.object
<CustomObject>
    <customHelpPage>ffbc__loghelp</customHelpPage>
    <description>Contains logs of events that occur during asynchronous processes in FinancialForce Billing Central.</description>
    <fields>
        <fullName>ffbc__IsSummary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this log represents a summary for the entire run.</description>
        <inlineHelpText>Indicates whether this log represents a summary for the entire run.</inlineHelpText>
        <label>Summary Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbc__Message__c</fullName>
        <description>Description of the event logged.</description>
        <inlineHelpText>Description of the event logged.</inlineHelpText>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffbc__RecordId__c</fullName>
        <description>Id of the record to which this log relates.</description>
        <inlineHelpText>Id of the record to which this log relates.</inlineHelpText>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__RunId__c</fullName>
        <description>Id of the process during which the event occurred.</description>
        <inlineHelpText>Id of the process during which the event occurred.</inlineHelpText>
        <label>Run Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__Status__c</fullName>
        <description>Status of the log.</description>
        <inlineHelpText>Status of the log.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>ffbc__All</fullName>
        <columns>NAME</columns>
        <columns>ffbc__RunId__c</columns>
        <columns>ffbc__Status__c</columns>
        <columns>ffbc__Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>